[package]
name = "rust-api"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_mysql_pool"]

[global.databases]
sqlite_logs = { url = "./database.mysql" }
